# turbogenius

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: turbogenius-build-test.yml
examples/: all_examples_clean.sh
examples/pyturbo_examples/: all_examples_clean.sh  all_examples_test.py  basis_sets_examples.py  convertfort10_examples.py  convertfort10mol_examples.py  fort10_examples.py  lrdmc_examples.py  lrdmcopt_examples.py  makefort10_examples.py  namelist_examples.py  prep_examples.py  pseudopotentials_examples.py  structures_examples.py  vmc_examples.py  vmcopt_examples.py
examples/turbogenius_examples/: all_examples_clean.sh  all_examples_test.py  convertfort10mol_examples.py  lrdmc_examples.py  makefort10_examples.py  prep_examples.py  sequential_workflow_examples.py  trexio_to_turborvb_examples.py  vmc_examples.py  vmcopt_examples.py
tests/: all_test_clean.sh
tests/pyturbo_tests/: all_test_clean.sh  basis_sets_examples.py  basis_sets_test.py  convertfort10_examples.py  convertfort10_test.py  convertfort10mol_examples.py  convertfort10mol_test.py  fort10_examples.py  fort10_test.py  lrdmc_examples.py  lrdmc_extrapolation_examples.py  (+16 more)
turbogenius/: __init__.py  commandline_tools.py  convertfort10_genius.py  convertfort10mol_genius.py  convertpfaff_genius.py  correlated_sampling_genius.py  database_setup.py  geniusIO.py  lrdmc_genius.py  lrdmc_opt_genius.py  makefort10_genius.py  move_walker_data.py  prep_genius.py  readforward_genius.py  tools_genius.py  trexio_to_turborvb.py  trexio_wrapper.py  turbo_genius_cli.py  vmc_genius.py  vmc_opt_genius.py  wavefunction.py
(+178 files in other folders)
