[metadata]
name = turbogenius
author = Kosuke Nakano
author_email = kousuke_1123@icloud.com
long_description = file: README.md
long_description_content_type = README.md
url = https://github.com/kousuke-nakano/turbogenius
project_urls =
    Bug tracker = https://github.com/kousuke-nakano/turbogenius/issues
    Documentations = https://github.com/kousuke-nakano/turbotutorials
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >="3.7.2"
install_requires =
    matplotlib  >= "3.1.1"
    numpy       >= "1.20.1"
    pandas      >= "1.2.2"
    ase         >= "3.21.0"
    trexio      >= "1.2.0"
    pymatgen    >= "2021.2.16"
    pytest      >= "5.2.1"
    gitpython   >= "3.1.27"
    pydriller   >= "2.1"
    basis-set-exchange >= "0.9"
    click       >= "8.1.3"
    tqdm        >= "4.36.1"
    setuptools_scm >= "7.0.5"
    psutil      >= "5.0.0"

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    turbogenius = turbogenius.turbo_genius_cli:cli
    trexio-to-turborvb = turbogenius.trexio_to_turborvb:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
